--- a/appinfo.json
+++ b/appinfo.json
@@ -9,7 +9,7 @@
     "resources": {
         "media": [
             {
-                "file": "images/menu_icon.png",
+                "file": "resources/img/app_logo.png",
                 "menuIcon": true,
                 "name": "IMAGE_MENU_ICON",
                 "type": "bitmap"
