--- a/appinfo.json
+++ b/appinfo.json
@@ -9,17 +9,6 @@
     "resources": {
         "media": [
             {
-                "file": "images/menu_icon.png",
-                "menuIcon": true,
-                "name": "IMAGE_MENU_ICON",
-                "type": "bitmap"
-            },
-            {
-                "file": "images/logo_splash.png",
-                "name": "IMAGE_LOGO_SPLASH",
-                "type": "bitmap"
-            },
-            {
                 "file": "images/tile_splash.png",
                 "name": "IMAGE_TILE_SPLASH",
                 "type": "bitmap"
@@ -32,6 +21,12 @@
             {
                 "file": "images/app_logo.png",
                 "name": "IMAGES_APP_LOGO_PNG",
+                "type": "png",
+                "menuIcon": true
+            },
+            {
+                "file": "images/ecobee_logo_sm.png",
+                "name": "IMAGE_LOGO_SPLASH",
                 "type": "png"
             }
         ]
