--- a/appinfo.json
+++ b/appinfo.json
@@ -9,6 +9,16 @@
     "resources": {
         "media": [
             {
+                "file": "images/menu_icon.png",
+                "name": "IMAGE_MENU_ICON",
+                "type": "bitmap"
+            },
+            {
+                "file": "images/logo_splash.png",
+                "name": "IMAGE_LOGO_SPLASH",
+                "type": "bitmap"
+            },
+            {
                 "file": "images/tile_splash.png",
                 "name": "IMAGE_TILE_SPLASH",
                 "type": "bitmap"
@@ -20,13 +30,8 @@
             },
             {
                 "file": "images/app_logo.png",
+                "menuIcon": true,
                 "name": "IMAGES_APP_LOGO_PNG",
-                "type": "png",
-                "menuIcon": true
-            },
-            {
-                "file": "images/ecobee_logo_sm.png",
-                "name": "IMAGE_LOGO_SPLASH",
                 "type": "png"
             }
         ]
