--- a/appinfo.json
+++ b/appinfo.json
@@ -29,6 +29,26 @@
                 "type": "font"
             },
             {
+                "file": "images/down-color.png",
+                "name": "IMAGES_DOWN_COLOR_PNG",
+                "type": "bitmap"
+            },
+            {
+                "file": "images/down-bw.png",
+                "name": "IMAGES_DOWN_BW_PNG",
+                "type": "bitmap"
+            },
+            {
+                "file": "images/up-color.png",
+                "name": "IMAGES_UP_COLOR_PNG",
+                "type": "bitmap"
+            },
+            {
+                "file": "images/up-bw.png",
+                "name": "IMAGES_UP_BW_PNG",
+                "type": "bitmap"
+            },
+            {
                 "file": "images/app_logo.png",
                 "menuIcon": true,
                 "name": "IMAGES_APP_LOGO_PNG",
