--- a/appinfo.json
+++ b/appinfo.json
@@ -29,6 +29,16 @@
                 "type": "font"
             },
             {
+                "file": "images/bg-cool.png",
+                "name": "IMAGES_BG_COOL_PNG",
+                "type": "bitmap"
+            },
+            {
+                "file": "images/bg-auto.png",
+                "name": "IMAGES_BG_AUTO_PNG",
+                "type": "bitmap"
+            },
+            {
                 "file": "images/bg-heat.png",
                 "name": "IMAGES_BG_HEAT_PNG",
                 "type": "bitmap"
