--- a/appinfo.json
+++ b/appinfo.json
@@ -9,6 +9,7 @@
     "resources": {
         "media": [
             {
+                "menuIcon": true,
                 "file": "images/menu_icon.png",
                 "name": "IMAGE_MENU_ICON",
                 "type": "bitmap"
