Animation for hold temperature icon

--- a/appinfo.json
+++ b/appinfo.json
@@ -9,7 +9,17 @@
     "resources": {
         "media": [
             {
-                "file": "images/app_logo_splash.png",
+                "file": "images/menu_icon.png",
+                "name": "IMAGE_MENU_ICON",
+                "type": "bitmap"
+            },
+            {
+                "file": "images/logo_splash.png",
+                "name": "IMAGE_LOGO_SPLASH",
+                "type": "bitmap"
+            },
+            {
+                "file": "images/tile_splash.png",
                 "name": "IMAGE_TILE_SPLASH",
                 "type": "bitmap"
             },
@@ -35,9 +45,9 @@
             },
             {
                 "file": "images/app_logo.png",
+                "menuIcon": true,
                 "name": "IMAGES_APP_LOGO_PNG",
-                "type": "bitmap",
-                "menuIcon": true
+                "type": "bitmap"
             }
         ]
     },
