--- a/appinfo.json
+++ b/appinfo.json
@@ -57,7 +57,7 @@
         ]
     },
     "sdkVersion": "3",
-    "shortName": "pebblebee",
+    "shortName": "Hive",
     "targetPlatforms": [
         "aplite",
         "basalt"
