--- a/appinfo.json
+++ b/appinfo.json
@@ -57,14 +57,14 @@
         ]
     },
     "sdkVersion": "3",
-    "shortName": "Hive dev",
+    "shortName": "Hive",
     "targetPlatforms": [
         "aplite",
         "basalt"
     ],
-    "uuid": "1da7a68a-b0e7-4a3a-8b03-dea5494f3bba",
+    "uuid": "4e475ece-7659-4ecf-9cc7-57964455b0ba",
     "versionCode": 1,
-    "versionLabel": "1.0",
+    "versionLabel": "1.1",
     "watchapp": {
         "hiddenApp": false,
         "watchface": false
