--- a/appinfo.json
+++ b/appinfo.json
@@ -60,7 +60,8 @@
     "shortName": "Hive",
     "targetPlatforms": [
         "aplite",
-        "basalt"
+        "basalt",
+        "chalk"
     ],
     "uuid": "4e475ece-7659-4ecf-9cc7-57964455b0ba",
     "versionCode": 1,
